<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/social_media"
        android:textSize="60sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/descrption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descrption"
        android:textStyle="italic"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/loginPageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page"
        android:textStyle="italic"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/descrption"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descrption"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/signInButtonLogin"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#0ED6B9"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/forgot_password"
        android:textSize="16sp"
        android:textStyle="bold"
        android:backgroundTint="#0ED6B9"
        android:textColor="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/signInButtonLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        />

    <Button
        android:id="@+id/registerButtonLogin"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/register"
        android:textSize="16sp"
        android:textStyle="bold"
        android:backgroundTint="#0ED6B9"
        android:textColor="#ffffff"
        app:layout_constraintTop_toTopOf="@id/forgotPasswordButton"
        app:layout_constraintLeft_toRightOf="@id/forgotPasswordButton"
        android:layout_marginLeft="25dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>